--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -5,12 +5,11 @@
         <!--<ion-item ui-sref="tabsController.popularMusiq">Popular Musiq</ion-item>-->
         <ion-item ui-sref="tabsController.newMusiq">Album Search</ion-item>
         <ion-item ui-sref="tabsController.artistNameSearch">Artist Search</ion-item>
-        <ion-item ui-sref="tabsController.songTitleSearch">Song Search</ion-item>
+        <ion-item ui-sref="tabsController.songTitleSearch">Track Search</ion-item>
         <ion-item ui-sref="tabsController.musiqGenreSearch">Related Search</ion-item>
       </ion-list>
 
 
-      <img ng-src="Untitled%202.png" alt=""/>
 
   </ion-content>
 </ion-view>
