--- a/www/lib/ionic/css/style.css
+++ b/www/lib/ionic/css/style.css
@@ -30,21 +30,39 @@ h4{
     text-align: center;
 }
 
+.aboutText{
+    text-align: center;
+}
+#musicIcon{
+    color: green;
+    text-align: center;
+}
+.homeNote{
+    text-align: center;
+    font-size: xx-large;
+}
+.likeBtn {
+    left: 80%;
+}
+
 
     #aboutTextTitle {
+        font-family: Copperplate;
         font-size: 3em;
-        text-align: center;
+        line-height: 36px;
     }
 
 
 
     .aboutTextContent {
+        font-family: AppleGothic;
         font-size: 2em;
-        text-align: center;
+        line-height: 26px;
     }
 
 
     #aboutTextCreatedBy {
-        font-size: 1em;
-        text-align: center;
+        font-family: Copperplate;
+        font-size: 1.5em;
+        line-height: 26px;
     }
