--- a/www/templates/artistHome.html
+++ b/www/templates/artistHome.html
@@ -1,5 +1,6 @@
 <ion-view title="Artist Home">
   <ion-content overflow-scroll="true" padding="true" class="has-header has-footer" ng-controller="ArtistHomeController as ah">
+      <button class="likeBtn button ion-thumbsup"> Like</button>
     <form class="list">
       <h1 class="fullFont">{{ah.artist}}</h1>
       <img class="fullImage" src="{{ah.bandPic}}"/>
