--- a/www/templates/artistNameSearch.html
+++ b/www/templates/artistNameSearch.html
@@ -14,7 +14,9 @@
 
             {{"Popularity: " + item.popularity}}</br>
             {{"Genre: " + item.genres[0]}}
-
+          <div class="item-button-right">
+            <button class="item-button-right button smallText" >Artist Page</button>
+          </div>
         </li>
       </ul>
     </form>
