--- a/www/templates/relatedArtistSearch.html
+++ b/www/templates/relatedArtistSearch.html
@@ -15,6 +15,10 @@
                     <span class="rcArtistName">{{artist.name}}</span> <br>
                     {{"Popularity: " + artist.popularity}} <br>
                     {{"Genre: " + artist.genres[0]}}
+
+                    <div class="item-button-right">
+                        <button class="item-button-right button smallText" >Artist Page</button>
+                    </div>
                 </li>
 
 
