--- a/www/templates/albumSearch.html
+++ b/www/templates/albumSearch.html
@@ -11,12 +11,11 @@
         <li class="item item-thumbnail-left" ng-click="ac.currentArtist(item.id)">
           <img ng-src="{{item.images[1].url}}"/>
 
-          <div>
-            <button class="buttonStyle" ui-sref="tabsController.artistHome"
-                    ng-click="tc.currentArtist(item.album.id)">Artist Page
-            </button>
+
+          <div class="item-button-right">
+            <button class="item-button-right button smallText" >Artist Page</button>
           </div>
-          <div class="rcArtistName">{{item.name}}</div>
+          <div class="rcArtistName"><br><br>{{item.name}}</div>
         </li>
       </ul>
     </form>
