--- a/www/templates/myLikes.html
+++ b/www/templates/myLikes.html
@@ -1,7 +1,7 @@
 <ion-view title="My Likes">
     <ion-content overflow-scroll="true" padding="true" class="has-header" ng-controller="myLikesController as ml">
         <form action="">
-        <button class="button button-clear" type="submit" ng-click="ml.getLikes()">Click Me</button>
+        <!--<button class="button button-clear" ng-click="ml.getLikes()">Click Me</button>-->
 
         <ul ng-repeat="liked in ml.currentLikes">
 
