User Added to Feedback
User added to feedback, and home page centered.

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,4 +1,4 @@
-<ion-view title="Login">
+<ion-view title="Login" class="loginPage">
   <ion-content overflow-scroll="true" padding="true" class="has-header">
 
     <form class="list">
@@ -6,6 +6,9 @@
       <div ng-controller="MainController as vm">
 
         <div ng-hide="vm.loggedIn">
+          <br/>
+          <br/>
+          <br/>
 
           <h2>Welcome to Musiquality!!</h2>
 
