--- a/www/templates/albumSearch.html
+++ b/www/templates/albumSearch.html
@@ -1,5 +1,5 @@
 <ion-view title="Album Search">
-  <ion-content overflow-scroll="true" padding="true" class="has-header has-footer"
+  <ion-content overflow-scroll="true" padding="true" class="has-header"
                ng-controller="AlbumController as ac">
     <form class="list">
       <label class="item item-input">
