--- a/www/templates/artistNameSearch.html
+++ b/www/templates/artistNameSearch.html
@@ -1,5 +1,5 @@
 <ion-view title="Artist Search" class="backGroundImage">
-  <ion-content overflow-scroll="true" padding="true" class="has-header has-footer" ng-controller="NameController as nc">
+  <ion-content overflow-scroll="true" padding="true" class="has-header" ng-controller="NameController as nc">
     <form class="list">
       <label class="item item-input">
         <!--<span class="input-label">Input</span>-->
