--- a/www/templates/relatedArtistSearch.html
+++ b/www/templates/relatedArtistSearch.html
@@ -1,6 +1,6 @@
 
 <ion-view title="Related Search">
-    <ion-content overflow-scroll="true" padding="true" class="has-header has-footer" ng-controller="RelatedArtistController as rc">
+    <ion-content overflow-scroll="true" padding="true" class="has-header" ng-controller="RelatedArtistController as rc">
         <form class="list">
             <label class="item item-input">
                 <!--<span class="input-label">Input</span>-->
