--- a/www/templates/feedback.html
+++ b/www/templates/feedback.html
@@ -11,7 +11,7 @@
             </label>
 
         </form>
-        <button class="button button-stable button-block " ng-click="fc.feedback()">Send</button>
+        <button class="button button-dark button-block " ng-click="fc.feedback()">Send</button>
         <div ng-show="fc.messageSent">
             <h4>Your feedback has been sent.</h4>
             <h4>Thank You!!</h4>
