--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -1,5 +1,6 @@
 <ion-view title="About">
     <ion-content overflow-scroll="true" padding="true" class="has-header">
+      <ion-item class="list item-text-wrap" >
         <div class="aboutText">
             <p id="aboutTextTitle">Welcome to <strong>Musiquality!!</strong>
             </p> </br>
@@ -15,5 +16,6 @@
             </p>
             <p id="aboutTextCreatedBy">Created by:  Geoff Brown, Chris Downs, Jonny Fewkes, and Dan Tuttle. </p>
         </div>
+      </ion-item>
     </ion-content>
 </ion-view>
