--- a/www/lib/ionic/css/style.css
+++ b/www/lib/ionic/css/style.css
@@ -40,7 +40,7 @@
     width: 100%;
 }
 h4{
-    color: green;
+    color: cornflowerblue;
     text-align: center;
 }
 .aboutText{
@@ -48,7 +48,7 @@ h4{
 
 }
 #musicIcon{
-    color: green;
+    color: cornflowerblue;
     text-align: center;
 }
 .homeNote{
@@ -59,30 +59,39 @@ h4{
     left: 80%;
 
 }
-
-    #aboutTextTitle {
-        font-family: Copperplate;
-        font-size: 2em;
-        line-height: 24px;
-    }
-
+#aboutTextTitle {
+    font-family: Copperplate;
+    font-size: 2em;
+    line-height: 24px;
+}
 
 
-    .aboutTextContent {
-        font-family: AppleGothic;
-        font-size: 1em;
-        line-height: 15px;
-    }
+
+.aboutTextContent {
+    font-family: AppleGothic;
+    font-size: 1em;
+    line-height: 15px;
+}
 
 
-    #aboutTextCreatedBy {
-        font-family: Copperplate;
-        font-size: .75em;
-        line-height: 15px;
-    }
+#aboutTextCreatedBy {
+    font-family: Copperplate;
+    font-size: .75em;
+    line-height: 15px;
+}
 
 
 
 .loginPage{
+    text-align: center;
+}
+.feedbackSent{
+    background-color: black;
+    border-radius: 10%;
+    margin-left: 20%;
+    margin-right: 20%;
+    padding-top: 10px;
+}
+.headerCenter{
     text-align: center;
 }
