--- a/www/templates/albumSearch.html
+++ b/www/templates/albumSearch.html
@@ -1,5 +1,5 @@
 <ion-view title="Album Search">
-  <ion-content overflow-scroll="true" padding="true" class="has-header"
+  <ion-content overflow-scroll="true" padding="true" class="headerCenter has-header"
                ng-controller="AlbumController as ac">
     <form class="list">
       <label class="item item-input">
@@ -15,7 +15,7 @@
           <div class="item-button-right">
             <button class="item-button-right button smallText" >Artist Page</button>
           </div>
-          <div class="rcArtistName"><br><br>{{item.name}}</div>
+          <span class="rcArtistName"><br><br>{{item.name}}</span>
         </li>
       </ul>
     </form>
