--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -1,5 +1,5 @@
 <ion-view title="About">
-    <ion-content overflow-scroll="true" padding="true" class="has-header">
+    <ion-content overflow-scroll="true" padding="true" class="headerCenter has-header">
       <ion-item class="list item-text-wrap" >
         <div class="aboutText">
             <p id="aboutTextTitle">Welcome to <strong>Musiquality!!</strong>
@@ -13,7 +13,7 @@
             </p>
             <p class="aboutTextContent">
                 Musiquality will enable you to expand your music library and help you to purchase music from quality artists.
-            </p>
+            </p><br/><br/>
             <p id="aboutTextCreatedBy">Created by:  Geoff Brown, Chris Downs, Jonny Fewkes, and Dan Tuttle. </p>
         </div>
       </ion-item>
