--- a/www/lib/ionic/css/style.css
+++ b/www/lib/ionic/css/style.css
@@ -95,3 +95,10 @@ h4{
 .headerCenter{
     text-align: center;
 }
+.aboutBG{
+    background-image: url("Untitled%202.png");
+    background-size: 100% 100%;
+    height: 100px;
+    width: 219px;
+    margin: auto;
+}
