--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -1,5 +1,5 @@
 <ion-view title="About">
-    <ion-content overflow-scroll="true" padding="true" class="headerCenter has-header">
+    <ion-content overflow-scroll="true" padding="true" class="has-header">
       <ion-item class="list item-text-wrap" >
         <div class="aboutText">
             <p id="aboutTextTitle">Welcome to <strong>Musiquality!!</strong>
