--- a/www/templates/feedback.html
+++ b/www/templates/feedback.html
@@ -1,5 +1,5 @@
 <ion-view title="Feedback"  ng-init="emails = [{ from: 'John', subject: 'I love angular', date: 'Jan 1' }]">
-    <ion-content overflow-scroll="true" padding="true" class="headerCenter has-header"  ng-controller="FeedbackController as fc">
+    <ion-content overflow-scroll="true" padding="true" class="has-header"  ng-controller="FeedbackController as fc">
         <form class="list">
             <label class="item">
                 <input ng-click="fc.hideAlert()" class="feedbackInput" type="text" placeholder="Enter your email" ng-model="fc.name">
