--- a/www/templates/songTitleSearch.html
+++ b/www/templates/songTitleSearch.html
@@ -1,5 +1,5 @@
 <ion-view title="Track Search">
-    <ion-content overflow-scroll="true" padding="true" class="headerCenter has-header" ng-controller="TitleController as tc">
+    <ion-content overflow-scroll="true" padding="true" class="has-header" ng-controller="TitleController as tc">
         <form class="list">
             <label class="item item-input">
                 <!--<span class="input-label">Input</span>-->
